fix(front): Fix the broken styles in the page `News`
Because now we use CSS Module rather than CSS-in-JS, some CSS variables are
broken.

Now we fixed it.

--- a/front/src/page/styles/News.module.scss
+++ b/front/src/page/styles/News.module.scss
@@ -1,5 +1,6 @@
 @use "../../styles/mixin";
 @use "../../styles/mediaQuery";
+@use "../../styles/fontSize";
 
 .wrapper {
     @include mixin.mainpart($padding-at-begin: 0);
@@ -37,7 +38,7 @@
     padding-left: 1rem;
     padding-right: 1rem;
     padding-top: 1rem;
-    font-size: var(--fs-h0);
+    font-size: fontSize.$h0;
 }
 
 .content {
